--- a/src/scss/mixins/_common.scss
+++ b/src/scss/mixins/_common.scss
@@ -6,8 +6,11 @@
 @mixin img-fit {
   @include pos-center;
 
+  max-height: 100%;
+  max-width : 100%;
   min-height: 100%;
   min-width : 100%;
+
   object-fit: scale-down;
 }
 
