--- a/src/scss/components/image/_variables.scss
+++ b/src/scss/components/image/_variables.scss
@@ -1,7 +1,1 @@
-$nav-item-padding-x          : var(--component-space-base);
-$nav-item-padding-y          : var(--component-space-base);
-
-$nav-link-color              : var(--color-subtle);
-$nav-link-hover-color        : var(--color-body);
-$nav-link-active-color       : var(--color-heading);
-$nav-link-transition-duration: var(--transition-duration-base);
+$img-height: var(--component-size-base);
