--- a/src/scss/components/image/_base.scss
+++ b/src/scss/components/image/_base.scss
@@ -1,5 +1,7 @@
 .img {
-  height: $img-height;
+  box-sizing    : border-box;
+  height        : $img-height;
+  vertical-align: middle;
 }
 
 .img-fluid {
