--- a/src/scss/mixins/_components.scss
+++ b/src/scss/mixins/_components.scss
@@ -40,3 +40,7 @@ Styles */
     border-color    : transparent;
   }
 }
+
+@mixin component-gap-mixin($name) {
+  gap: var(--component-space-#{$name});
+}
