--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -1,9 +1,9 @@
-$btn-border-width       : var(--border-width-base);
-$btn-border-radius      : var(--border-radius-base);
-$btn-font-size          : var(--component-font-size-base);
-$btn-font-weight        : var(--font-weight-bold);
-$btn-height             : var(--component-size-base);
-$btn-padding-x          : var(--component-space-base);
-$btn-padding-y          : 0;
+$btn-border-width: var(--component-border-width-base);
+$btn-border-radius: var(--border-radius-base);
+$btn-font-size: var(--component-font-size-base);
+$btn-font-weight: var(--font-weight-bold);
+$btn-height: var(--component-size-base);
+$btn-padding-x: var(--component-space-base);
+$btn-padding-y: 0;
 
 $btn-transition-duration: var(--transition-duration-base);
