--- a/src/scss/components/form/_base.scss
+++ b/src/scss/components/form/_base.scss
@@ -3,7 +3,7 @@ form {
     &:invalid {
       input,
       button {
-        &[type='submit'] {
+        &[type="submit"] {
           @include disabled;
         }
       }
