--- a/src/scss/variables/_spacing.scss
+++ b/src/scss/variables/_spacing.scss
@@ -1,7 +1,7 @@
 $space-base: 1rem !default;
 
-$space-xs  : $space-base * .5 !default;
-$space-sm  : $space-base * .75 !default;
-$space-md  : $space-base * 1.25 !default;
-$space-lg  : $space-base * 2 !default;
-$space-xl  : $space-base * 3.25 !default;
+$space-xs: $space-base * 0.5 !default;
+$space-sm: $space-base * 0.75 !default;
+$space-md: $space-base * 1.25 !default;
+$space-lg: $space-base * 2 !default;
+$space-xl: $space-base * 3.25 !default;
