--- a/src/scss/components/form-control/_build.scss
+++ b/src/scss/components/form-control/_build.scss
@@ -3,7 +3,7 @@
 Sizing */
 
 @each $name, $props in $form-control-sizing-map {
-  @if ($name == '') {
+  @if ($name == "") {
     .form-control {
       @include form-control-sizing-mixin($props);
     }
