--- a/src/scss/functions/_color.scss
+++ b/src/scss/functions/_color.scss
@@ -1,11 +1,15 @@
 @function color-yiq($background, $dark: #111, $light: #fff) {
-  $r  : red($background);
-  $g  : green($background);
-  $b  : blue($background);
+  $r: red($background);
+  $g: green($background);
+  $b: blue($background);
 
-  $yiq: (($r*299) + ($g*587) + ($b*114)) / 1000;
+  $yiq: (($r * 299) + ($g * 587) + ($b * 114)) / 1000;
 
-  @if ($yiq >= 128) { @return $dark; } @else { @return $light; }
+  @if ($yiq >= 128) {
+    @return $dark;
+  } @else {
+    @return $light;
+  }
 }
 
 @function color-hex-to-rgb($hex) {
