--- a/src/scss/mixins/_common.scss
+++ b/src/scss/mixins/_common.scss
@@ -1,5 +1,5 @@
 @mixin disabled {
-  opacity       : .48  !important;
+  opacity: 0.48 !important;
   pointer-events: none !important;
 }
 
@@ -7,26 +7,28 @@
   @include pos-center;
 
   max-height: 100%;
-  max-width : 100%;
+  max-width: 100%;
   min-height: 100%;
-  min-width : 100%;
+  min-width: 100%;
 
   object-fit: scale-down;
 }
 
 @mixin pos-center {
-  left     : 50%;
-  position : absolute !important;
-  top      : 50%;
+  left: 50%;
+  position: absolute !important;
+  top: 50%;
   transform: translate(-50%, -50%);
 }
 
-@mixin pseudo($content: '', $display: block, $pos: absolute) {
-  content : $content;
-  display : $display;
+@mixin pseudo($content: "", $display: block, $pos: absolute) {
+  content: $content;
+  display: $display;
   position: $pos;
 }
 
 @mixin map-props-mixin($props) {
-  @each $name, $value in $props { #{$name}: #{$value}; }
+  @each $name, $value in $props {
+    #{$name}: #{$value};
+  }
 }
