--- a/src/scss/typography/_font.scss
+++ b/src/scss/typography/_font.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:600');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+@import url("https://fonts.googleapis.com/css?family=Quicksand:600");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400");
