--- a/src/scss/utilities/_width.scss
+++ b/src/scss/utilities/_width.scss
@@ -1,4 +1,4 @@
-@each $value in ('40', '60', '80') {
+@each $value in ("40", "60", "80") {
   .max-w-#{$value}-ch {
     max-width: #{$value}ch;
   }
