--- a/src/scss/variables/_border.scss
+++ b/src/scss/variables/_border.scss
@@ -1,2 +1,2 @@
-$border-radius-base: .25rem !default;
-$border-width-base : 1px !default;
+$border-radius-base: 0.25rem !default;
+$border-width-base: 1px !default;
