--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -3,15 +3,12 @@ $heading-line-height: 1.4 !default;
 
 $font-family-base: "Open Sans" !default;
 $font-family-heading: "Quicksand" !default;
-$font-family-generic: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol" !default;
+$font-family-generic: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 $font-scale: 1.333 !default; // Perfect Fourth
 $font-size-base: 1rem !default;
 
-$font-size-h1: 1em *
-  ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale) !default;
+$font-size-h1: 1em * ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale) !default;
 $font-size-h2: 1em * ($font-scale * $font-scale * $font-scale * $font-scale) !default;
 $font-size-h3: 1em * ($font-scale * $font-scale * $font-scale) !default;
 $font-size-h4: 1em * ($font-scale * $font-scale) !default;
