--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -59,21 +59,21 @@
   --color-primary-yiq: #{$color-primary-yiq};
   --color-primary-rgb: #{color-hex-to-rgb($color-primary)};
 
-  --color-primary-lt: #{$color-primary-lt};
-  --color-primary-lter: #{$color-primary-lter};
+  // --color-primary-lt: #{$color-primary-lt};
+  // --color-primary-lter: #{$color-primary-lter};
 
-  --color-primary-dk: #{$color-primary-dk};
-  --color-primary-dker: #{$color-primary-dker};
+  // --color-primary-dk: #{$color-primary-dk};
+  // --color-primary-dker: #{$color-primary-dker};
 
   --color-accent: #{$color-accent};
   --color-accent-yiq: #{$color-accent-yiq};
   --color-accent-rgb: #{color-hex-to-rgb($color-accent)};
 
-  --color-accent-lt: #{$color-accent-lt};
-  --color-accent-lter: #{$color-accent-lter};
+  // --color-accent-lt: #{$color-accent-lt};
+  // --color-accent-lter: #{$color-accent-lter};
 
-  --color-accent-dk: #{$color-accent-dk};
-  --color-accent-dker: #{$color-accent-dker};
+  // --color-accent-dk: #{$color-accent-dk};
+  // --color-accent-dker: #{$color-accent-dker};
 
   // status
 
