--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -6,31 +6,40 @@ $color-white: #fff !default;
 $color-primary: #7c4dff !default;
 $color-primary-yiq: color-yiq($color-primary) !default;
 
-$color-primary-lt: lighten($color-primary, $brightness-xs) !default;
-$color-primary-lter: lighten($color-primary, $brightness-sm) !default;
+// $color-primary-lt: lighten($color-primary, $brightness-xs) !default;
+// $color-primary-lter: lighten($color-primary, $brightness-sm) !default;
 
-$color-primary-dk: darken($color-primary, $brightness-xs) !default;
-$color-primary-dker: darken($color-primary, $brightness-sm) !default;
+// $color-primary-dk: darken($color-primary, $brightness-xs) !default;
+// $color-primary-dker: darken($color-primary, $brightness-sm) !default;
 
 $color-accent: #00c853 !default;
 $color-accent-yiq: color-yiq($color-accent) !default;
 
-$color-accent-lt: lighten($color-accent, $brightness-xs) !default;
-$color-accent-lter: lighten($color-accent, $brightness-sm) !default;
+// $color-accent-lt: lighten($color-accent, $brightness-xs) !default;
+// $color-accent-lter: lighten($color-accent, $brightness-sm) !default;
 
-$color-accent-dk: darken($color-accent, $brightness-xs) !default;
-$color-accent-dker: darken($color-accent, $brightness-sm) !default;
+// $color-accent-dk: darken($color-accent, $brightness-xs) !default;
+// $color-accent-dker: darken($color-accent, $brightness-sm) !default;
 
 // -- status colors
 
-$color-success: #4caf50 !default;
+$color-success: #66bb6a !default;
 $color-success-yiq: color-yiq($color-success) !default;
 
-$color-success-lt: lighten($color-success, $brightness-xs) !default;
-$color-success-lter: lighten($color-success, $brightness-sm) !default;
+$color-info: #42a5f5 !default;
+$color-info-yiq: color-yiq($color-info) !default;
 
-$color-success-dk: darken($color-success, $brightness-xs) !default;
-$color-success-dker: darken($color-success, $brightness-sm) !default;
+$color-warning: #ffee58 !default;
+$color-warning-yiq: color-yiq($color-warning) !default;
+
+$color-error: #ef5350 !default;
+$color-error-yiq: color-yiq($color-error) !default;
+
+// $color-success-lt: lighten($color-success, $brightness-xs) !default;
+// $color-success-lter: lighten($color-success, $brightness-sm) !default;
+
+// $color-success-dk: darken($color-success, $brightness-xs) !default;
+// $color-success-dker: darken($color-success, $brightness-sm) !default;
 
 // -- subtle colors
 
