--- a/src/scss/typography/_heading.scss
+++ b/src/scss/typography/_heading.scss
@@ -33,7 +33,7 @@ h3,
   font-size: var(--font-size-h3);
 
   + p {
-    margin-top: var(--space-md);
+    margin-top: var(--space-base);
   }
 }
 
@@ -42,7 +42,7 @@ h4,
   font-size: var(--font-size-h4);
 
   + p {
-    margin-top: var(--space-base);
+    margin-top: var(--space-sm);
   }
 }
 
@@ -51,7 +51,7 @@ h5,
   font-size: var(--font-size-h5);
 
   + p {
-    margin-top: var(--space-base);
+    margin-top: var(--space-xs);
   }
 }
 
@@ -60,6 +60,6 @@ h6,
   line-height: var(--body-line-height);
 
   + p {
-    margin-top: var(--space-sm);
+    margin-top: var(--space-xs);
   }
 }
