--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -6,42 +6,30 @@ $color-white: #fff !default;
 $color-primary: #7c4dff !default;
 $color-primary-yiq: color-yiq($color-primary) !default;
 
-// $color-primary-lt: lighten($color-primary, $brightness-xs) !default;
-// $color-primary-lter: lighten($color-primary, $brightness-sm) !default;
-
-// $color-primary-dk: darken($color-primary, $brightness-xs) !default;
-// $color-primary-dker: darken($color-primary, $brightness-sm) !default;
-
 $color-accent: #00c853 !default;
 $color-accent-yiq: color-yiq($color-accent) !default;
 
-// $color-accent-lt: lighten($color-accent, $brightness-xs) !default;
-// $color-accent-lter: lighten($color-accent, $brightness-sm) !default;
-
-// $color-accent-dk: darken($color-accent, $brightness-xs) !default;
-// $color-accent-dker: darken($color-accent, $brightness-sm) !default;
-
 // -- status colors
 
-$color-success: #66bb6a !default;
+$color-default: #e0e0e0 !default;
+$color-default-yiq: color-yiq($color-default) !default;
+
+$color-success: #43a047 !default;
 $color-success-yiq: color-yiq($color-success) !default;
 
-$color-info: #42a5f5 !default;
+$color-info: #1e88e5 !default;
 $color-info-yiq: color-yiq($color-info) !default;
 
-$color-warning: #ffee58 !default;
+$color-warning: #fdd835 !default;
 $color-warning-yiq: color-yiq($color-warning) !default;
 
-$color-error: #ef5350 !default;
+$color-error: #e53935 !default;
 $color-error-yiq: color-yiq($color-error) !default;
 
-// $color-success-lt: lighten($color-success, $brightness-xs) !default;
-// $color-success-lter: lighten($color-success, $brightness-sm) !default;
-
-// $color-success-dk: darken($color-success, $brightness-xs) !default;
-// $color-success-dker: darken($color-success, $brightness-sm) !default;
-
 // -- subtle colors
+
+$color-default-subtle: #fafafa !default;
+$color-default-subtle-yiq: color-yiq($color-default-subtle) !default;
 
 $color-success-subtle: #e8f5e9 !default;
 $color-success-subtle-yiq: color-yiq($color-success-subtle) !default;
@@ -57,7 +45,7 @@ $color-error-subtle-yiq: color-yiq($color-error-subtle) !default;
 
 // backgrounds
 
-$color-bg: #212121 !default;
+$color-bg: #fff !default;
 
 $color-bg-lt: lighten($color-bg, $brightness-xs) !default;
 $color-bg-lter: lighten($color-bg, $brightness-sm) !default;
